--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 # Custom proprietes
 training.afpa.cda24060.webdemo.apiURL=http://localhost:9000
 
+# Affiche les messages d'erreur dans la page (utile pour le débogage)
 # affichage d'une page d'erreurs
 spring.web.error.include-exception=true
 spring.web.error.include-stacktrace=always
