--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 # Custom proprietes
-training.afpa.cda24060.webdemo.apiURL=http://localhost:9000
+training.afpa.cda24060.web2026.apiURL=http://localhost:9000
 
 # Affiche les messages d'erreur dans la page (utile pour le débogage)
 # affichage d'une page d'erreurs
