jenkinsfile : modification config api

--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ WEB_IMAGE_NAME=neojero/webspringboot2026:latest
 # PARAMETRAGE DOCKER
 URL_API=http://apiprojet:9000
 URL_BDD=jdbc:mysql://mysql_server:3306/springboot
+
+CONFIG_API_FOR_MDOCKER=./infra/api/
