--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,9 @@ services:
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=${JPA_DIALECT}
       - SPRING_JPA_SHOW_SQL=true
       - SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true
+      - SPRING_PROFILES_ACTIVE=ci
       # configuration de l'application spingboot api
-      #- SPRING_CONFIG_LOCATION=/app/application.properties
+      #- SPRING_CONFIG_LOCATION=${CONFIG_API_FOR_MDOCKER}application-ci.properties
     depends_on:
       - mysql_server
     networks:
