jenkinsfile : modification config api

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MYSQL_USER=root
 MYSQL_PASSWORD=root
 
 # Config Springboot
-JPA_DIALECT=org.hibernate.dialect.MySQL8Dialect
+JPA_DIALECT=org.hibernate.dialect.MySQLDialect
 
 # DOCKER HUB nom des images
 API_IMAGE_NAME=neojero/apispringboot2026:latest
