--- a/infra/api/application-ci.properties
+++ b/infra/api/application-ci.properties
@@ -15,10 +15,10 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 
 # parametrage de la BDD
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=${DB_DRIVER}
+spring.datasource.url=jdbc:mysql://mysql_server:3306/springboot
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # modifie la BDD en fonction des entity pour le mode developpement sinon none
 spring.jpa.hibernate.ddl-auto=update
