github actions : ajout env dockerfile

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ MYSQL_ROOT_PASSWORD=root
 MY_DATABASE=springboot
 MYSQL_USER=root
 MYSQL_PASSWORD=root
+MYSQL_DRIVER=com.mysql.cj.jdbc.Driver
 
 # Config Springboot
 JPA_DIALECT=org.hibernate.dialect.MySQLDialect
