github actions : ajout env dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - SPRING_DATASOURCE_URL=${URL_BDD}
       - SPRING_DATASOURCE_USERNAME=${MYSQL_USER}
       - SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD}
-      - spring.datasource.driver-class-name=${MYSQL_DRIVER}
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=${MYSQL_DRIVER}
       # ici ce sont des parametres Dialect de Springboot pour la connexion BDD
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=${JPA_DIALECT}
       - SPRING_JPA_SHOW_SQL=true
