--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MY_DATABASE}
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -p$MYSQL_ROOT_PASSWORD"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     networks:
       - backend
 
@@ -57,8 +52,7 @@ services:
     env_file:
       - .env-api
     depends_on:
-      mysql_server:
-        condition: service_healthy
+      - mysql_server
     networks:
       - backend
 
