--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-name: springboot_appweb_2026
+name: springboot_apiweb_2026
 
 services:
   mysql_server:
@@ -50,7 +50,7 @@ services:
       - SPRING_JPA_SHOW_SQL=true
       - SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true
     env_file:
-      - infra/api/.env
+      - ./infra/api/.env
     depends_on:
       - mysql_server
     networks:
